--- a/src/main/resources/config/user-service.yaml
+++ b/src/main/resources/config/user-service.yaml
@@ -8,4 +8,8 @@ server:
       service-url:
         default-zone: http://localhost:8761/eureka/
 
+management:
+  tracing:
+    sampling:
+        probability: 1.0
 
