third commit test

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,7 +6,7 @@ spring:
   application:
     name: CONFIG-SERVER
   profiles:
-    active: git
+    active: native
   cloud:
     config:
       server:
