--- a/src/main/resources/config/user-service.yml
+++ b/src/main/resources/config/user-service.yml
@@ -6,7 +6,7 @@ server:
       register-with-eureka: true
       fetch-registry: true
       service-url:
-        default-zone: http://localhost:8761/eureka
+        default-zone: http://localhost:8761/eureka/
 
 management:
   tracing:
