--- a/src/main/resources/config/auth-service.yml
+++ b/src/main/resources/config/auth-service.yml
@@ -1,13 +1,17 @@
 server:
   port: 9090
 
-  eureka:
-    client:
-      register-with-eureka: true
-      fetch-registry: true
-      service-url:
-        default-zone: http://localhost:8761/eureka
 
+spring:
+  application:
+    name: auth-service
+eureka:
+  client:
+    register-with-eureka: true
+    fetch-registry: true
+    service-url:
+      defaultZone: ${EUREKA_SERVER_ADDRESS:http://54.169.219.205:8761/eureka}
+#
 management:
   tracing:
     sampling:
