--- a/src/main/resources/config/user-service.yml
+++ b/src/main/resources/config/user-service.yml
@@ -1,13 +1,31 @@
+#server:
+#  port: 8081
+#
+#  eureka:
+#    client:
+#      register-with-eureka: true
+#      fetch-registry: true
+#      service-url:
+#        defaultZone: ${EUREKA_SERVER_ADDRESS:http://54.169.219.205:8761/eureka}
+#
+#management:
+#  tracing:
+#    sampling:
+#      probability: 1.0
+
+#new update
 server:
   port: 8081
 
-  eureka:
-    client:
-      register-with-eureka: true
-      fetch-registry: true
-      service-url:
-        default-zone: http://localhost:8761/eureka/
 
+
+eureka:
+  client:
+    register-with-eureka: true
+    fetch-registry: true
+    service-url:
+      defaultZone: ${EUREKA_SERVER_ADDRESS:http://54.169.219.205:8761/eureka}
+#
 management:
   tracing:
     sampling:
